# ecse373_f24_rxc877_ariac_entry

./: CMakeLists.txt  README.md  package.xml
launch/: competition.launch  entry.launch
src/: competition_controller_node.cpp  start_competition_client.cpp
