<?xml version="1.0"?>
<package format="2">
  <name>ariac_entry</name>
  <version>0.0.0</version>
  <description>The ariac_entry package</description>

  <maintainer email="rxc877@todo.todo">rxc877</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecse_373_ariac</build_depend>
  <build_depend>ik_service</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_genration</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>ecse_373_ariac</exec_depend>
  <exec_depend>ik_service</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
